<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="rate_dialog_cancel">Later</string>
    <string name="rate_dialog_message">"You can turn off auto intake and change your current intake code manually if the timetable is not working for your intake.\n\n\nExample:\nFor Diploma in ICTSE students, the correct intake code should be "UCDFXXXXICT(SE)" instead of "UCDFXXXXICTSE""</string>
    <string name="rate_dialog_no">OK, don\'t show again</string>
    <string name="rate_dialog_ok">Rate</string>
    <string name="rate_dialog_title">Do you know?</string>
    <string name="about_title_dev1">khaibin</string>
    <string name="about_title_dev2">c0deslayer</string>
    <string name="about_title_dev3">abdhoms</string>
    <string name="about_title_devHeader">Developers</string>
    <string name="about_title_feedback">Feedback / Suggestions</string>
    <string name="about_title_rate">Rate and Review</string>
    <string name="about_title_summary">Quickly view your APU Webspace data with myProfile for Android.</string>
    <string name="accept">Accept</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="add_widget">Add widget</string>
    <string name="app_name">myProfile+</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="back_button_label">Back</string>
    <string name="bankdraft_title_amount_collected">Amount Collected:</string>
    <string name="bankdraft_title_date_collected">Date Collected:</string>
    <string name="bankdraft_title_draftno">Bank Draft No:</string>
    <string name="bankdraft_title_due">Bank Draft Due Date:</string>
    <string name="bankdraft_title_payable">Amount Payable:</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="closeDrawer">Close</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="dialog_exit">Exit</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_studentid">This Student ID is invalid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_settings">Settings</string>
    <string name="menu_title_about">Shuttle Bus Schedule</string>
    <string name="menu_title_refresh">Refresh</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_settings">Settings</string>
    <string name="message_network_error">"An unknown error has occurred. Please make sure you're connected to a working internet connection and try again?"</string>
    <string name="nav_about">Shuttle Bus Schedule</string>
    <string name="nav_exam">Exam Schedule</string>
    <string name="nav_fees">Fee Statement</string>
    <string name="nav_home">Home</string>
    <string name="nav_logout">Log out</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_shuttle_bus">Shuttle Bus Schedule</string>
    <string name="nav_timetable">Timetable</string>
    <string name="navigation_subheader">Others</string>
    <string name="next_button_label">Next</string>
    <string name="openDrawer">Open</string>
    <string name="profile_title_attendance">Attendance</string>
    <string name="profile_title_attendance_sep">/</string>
    <string name="profile_title_classes_attended">classes attended</string>
    <string name="profile_title_result">Result</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_studentid">Student ID</string>
    <string name="search_hint">Search Timetable, Exam, Resit, and even Lecturer schedules.</string>
    <string name="skip_button_label">Skip</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
    <string name="studentid">TPXXXXXX</string>
    <string name="studentname">Lorem Ipsum</string>
    <string name="summary_fine">Total Fine:</string>
    <string name="summary_outstanding">Total Outstanding:</string>
    <string name="summary_overdue">Total Overdue:</string>
    <string name="summary_paid">Total Paid:</string>
    <string name="summary_payable">Total Payable</string>
    <string name="title_activity_about">Shuttle Bus Schedule</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_search_results">Search Result</string>
    <string name="title_activity_settings">Settings</string>
    <string name="transaction_title_collected">Collected:</string>
    <string name="transaction_title_due">Due:</string>
    <string name="transaction_title_fine">Fine:</string>
    <string name="transaction_title_outstanding">Outstanding:</string>
    <string name="transaction_title_payable">Payable:</string>
    <string name="widget_empty_text">Nothing to see here</string>
    <string name="widget_login_message">"You're not logged in. Please log in to enjoy the best of myProfile."</string>
    <string name="widget_login_text">Login</string>
    <string name="widget_title_initialising">Initialising widget. Please wait.</string>
    <string name="widget_title_next_class">Next Class</string>

    <!-- Shuttle Bus Schedule -->
    <string name="weekday">Monday - Friday</string>
    <string name="weeksat">Saturday</string>

    <string name="shuttle_bus_title_one">LRT \u2194 APU</string>
    <string name="shuttle_bus_subtitle_one_one"><u>LRT \u2192 APU</u></string>
    <string name="shuttle_bus_body_one_one_weekday">8:00am, 8:25am, 9:15am, 10:30am, 11:30am, 12:10pm, 1:05pm, 2:30pm, 3:30pm, 4:15pm, 5:15pm, 5:45pm, 6:15pm</string>
    <string name="shuttle_bus_body_one_one_weeksat">8:10am, 8:40am</string>
    <string name="shuttle_bus_subtitle_one_two"><u>APU \u2192 LRT</u></string>
    <string name="shuttle_bus_body_one_two_weekday">10:00am, 11:00am, 12:00pm, 12:30pm, 1:30pm, 2:00pm, 3:00pm, 4:00pm, 5:10pm, 5:30pm, 6:10pm, 6:30pm, 7:15pm, 8:35pm**, 9:45pm**</string>
    <string name="shuttle_bus_body_one_two_weeksat">10:45am, 1:10pm</string>

    <string name="shuttle_bus_title_two">ACADEMIA \u2194 APU</string>
    <string name="shuttle_bus_subtitle_two_one"><u>ACADEMIA \u2192 APU</u></string>
    <string name="shuttle_bus_body_two_one_weekday">7:50am, 8:10am, 9:20am, 10:50am, 11:50am, 12:50pm, 2:20pm, 3:20pm, 4:20pm, 5:50pm</string>
    <string name="shuttle_bus_body_two_one_weeksat">7:50am, 8:20am</string>
    <string name="shuttle_bus_subtitle_two_two"><u>APU \u2192 ACADEMIA</u></string>
    <string name="shuttle_bus_body_two_two_weekday">10:30am, 11:30am, 12:30pm, 1:30pm, 2:00pm, 3:30pm, 5:10pm, 6:10pm, 7:15pm</string>
    <string name="shuttle_bus_body_two_two_weeksat">10:45am, 1:10pm</string>

    <string name="shuttle_bus_title_three">FORTUNE PARK \u2194 APU</string>
    <string name="shuttle_bus_subtitle_three_one"><u>FORTUNE PARK \u2192 APU</u></string>
    <string name="shuttle_bus_body_three_one_weekday">8:00am, 8:20am, 8:30am, 9:00am, 9:30am, 10:00am, 10:30am, 11:00am, 11:30am, 12:00pm, 1:00pm, 2:30pm, 3:30pm, 4:30pm, 5:30pm, 6:00pm</string>
    <string name="shuttle_bus_body_three_one_weeksat">7:55am, 8:25am</string>
    <string name="shuttle_bus_subtitle_three_two"><u>APU \u2192 FORTUNE PARK</u></string>
    <string name="shuttle_bus_body_three_two_weekday">10:30am, 11:30am, 12:30pm, 1:30pm, 2:00pm, 3:00pm, 3:30pm, 4:00pm, 5:10pm, 5:30pm, 6:10pm, 6:30pm, 7:15pm, 8:35pm**, 9:45pm**</string>
    <string name="shuttle_bus_body_three_two_weeksat">10:45am, 1:10pm</string>

    <string name="shuttle_bus_title_four">ENDAH PROMENADE \u2194 APU</string>
    <string name="shuttle_bus_subtitle_four_one"><u>ENDAH PROMENADE \u2192 APU</u></string>
    <string name="shuttle_bus_body_four_one_weekday">8:00am, 8:35am, 9:25am, 10:00am, 11:00am, 12:00pm, 1:00pm, 2:30pm, 3:30pm, 4:30pm, 5:30pm, 6:30pm</string>
    <string name="shuttle_bus_body_four_one_weeksat">8:05am, 8:35am</string>
    <string name="shuttle_bus_subtitle_four_two"><u>APU \u2192 ENDAH PROMENADE</u></string>
    <string name="shuttle_bus_body_four_two_weekday">10:30am, 11:30am, 12:30pm, 1:30pm, 2:00pm, 3:00pm, 4:00pm, 5:10pm, 6:10pm, 7:15pm, 8:35pm**, 9:45pm**</string>
    <string name="shuttle_bus_body_four_two_weeksat">10:45am, 1:10pm</string>

    <string name="shuttle_bus_title_five">COVILLEA / VISTA \u2194 APU</string>
    <string name="shuttle_bus_subtitle_five_one"><u>COVILLEA / VISTA \u2192 APU</u></string>
    <string name="shuttle_bus_body_five_one_weekday">8:00am, 8:20am, 8:30am, 9:00am, 9:30am, 10:00am, 10.30am, 11:00am, 11:30am, 12:00pm, 12:30pm, 12:45pm, 1:30pm, 2:30pm, 3:30pm, 4:00pm, 4:30pm, 5:00pm, 5:15pm, 5:30pm, 6:00pm, 6:30pm, 6:45pm</string>
    <string name="shuttle_bus_body_five_one_weeksat">8:20am, 8:50am</string>
    <string name="shuttle_bus_subtitle_five_two"><u>APU \u2192 COVILLEA / VISTA</u></string>
    <string name="shuttle_bus_body_five_two_weekday">10:00am, 10:30am, 11:00am, 11:30am, 12:00pm, 12:30pm, 1:00pm, 2:00pm, 3:00pm, 3:30pm, 4:00pm, 4:30pm, 5:10pm, 5:30pm, 6:10pm, 6:30pm, 7:15pm, 8:35pm**, 9:45pm**</string>
    <string name="shuttle_bus_body_five_two_weeksat">10:45am, 1:10pm</string>

    <string name="modded_by"> myProfile+</string>
</resources>
