<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" card_view:cardBackgroundColor="?cardviewBackground"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textColor="?textColor" android:id="@id/intake_code" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/bankdraft_title_payable" />
            <TextView android:textColor="?textColorInactive" android:id="@id/amount_payable" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:gravity="center_vertical" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/bankdraft_title_due" />
            <TextView android:textColor="?textColorInactive" android:id="@id/bankdraft_due" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/bankdraft_title_draftno" />
            <TextView android:textColor="?textColorInactive" android:id="@id/bankdraft_no" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/bankdraft_title_amount_collected" />
            <TextView android:textColor="?textColorInactive" android:id="@id/amount_collected" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:layout_width="140.0dip" android:layout_height="wrap_content" android:text="@string/bankdraft_title_date_collected" />
            <TextView android:textColor="?textColorInactive" android:id="@id/date_collected" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>