<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" card_view:cardBackgroundColor="?cardviewBackground"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <TableLayout android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:gravity="center_vertical" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/summary_payable" android:layout_weight="1.0" />
            <TextView android:textColor="?textColor" android:gravity="end" android:id="@id/totalpayable" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="0.0" />
        </TableRow>
        <TableRow android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:gravity="center_vertical" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/summary_paid" android:layout_weight="1.0" />
            <TextView android:textColor="?textColor" android:gravity="end" android:id="@id/totalpaid" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="0.0" />
        </TableRow>
        <TableRow android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:gravity="center_vertical" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/summary_overdue" android:layout_weight="1.0" />
            <TextView android:textColor="?textColor" android:gravity="end" android:id="@id/totaloverdue" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="0.0" />
        </TableRow>
        <TableRow android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:gravity="center_vertical" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/summary_outstanding" android:layout_weight="1.0" />
            <TextView android:textColor="?textColor" android:gravity="end" android:id="@id/totaloutstanding" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="0.0" />
        </TableRow>
        <TableRow android:paddingTop="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?textColorInactive" android:gravity="center_vertical" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/summary_fine" android:layout_weight="1.0" />
            <TextView android:textColor="?textColor" android:gravity="end" android:id="@id/totalfine" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="0.0" />
        </TableRow>
    </TableLayout>
</android.support.v7.widget.CardView>